syntax = "proto3";

package greeter;
option csharp_namespace = "Greeter.DTO";

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}