syntax = "proto3";

package greeter;
option csharp_namespace = "Greeter";

import "dto/HelloRequest.proto";
import "dto/HelloReply.proto";

// The greeting service definition.
service GreeterService {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}